--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h1 class="shop">SHOP</h1>
             <div class="icon">
               <img
-                src="service_icons/razor-hair-salon-tool.svg"
+                src="icons/razor-hair-salon-tool.svg"
                 class="svg-img"
                 alt="uff"
               />
@@ -122,7 +122,7 @@
             </div>
             <div class="service-image">
               <img
-                src="service_icons/razor-hair-salon-tool.svg"
+                src="icons/razor-hair-salon-tool.svg"
                 alt="Image could't load."
               />
             </div>
@@ -137,7 +137,7 @@
               <span>From $30</span>
             </div>
             <div class="service-image">
-              <img src="service_icons/scissors.svg" alt="Image could't load." />
+              <img src="icons/scissors.svg" alt="Image could't load." />
             </div>
           </div>
           <div class="mustache service-style">
@@ -150,7 +150,7 @@
               <span>From $30</span>
             </div>
             <div class="service-image">
-              <img src="service_icons/mustache-curled-tip-variant.svg" alt="" />
+              <img src="icons/mustache-curled-tip-variant.svg" alt="" />
             </div>
           </div>
           <div class="beard service-style">
@@ -163,7 +163,7 @@
               <span>From $30</span>
             </div>
             <div class="service-image">
-              <img src="service_icons/hat-with-beard.svg" alt="" />
+              <img src="icons/hat-with-beard.svg" alt="" />
             </div>
           </div>
         </div>
@@ -187,7 +187,7 @@
           <div class="barber-card">
             <div class="img-part">
               <img
-                src="licensed_barbers/jorge-cesar-LnMhd09k79E-unsplash.jpg"
+                src="images/jorge-cesar-LnMhd09k79E-unsplash.jpg"
                 alt=""
               />
             </div>
@@ -200,7 +200,7 @@
           <div class="barber-card">
             <div class="img-part">
               <img
-                src="licensed_barbers/colton-sturgeon-C2uzaHcTRBU-unsplash.jpg"
+                src="images/colton-sturgeon-C2uzaHcTRBU-unsplash.jpg"
                 alt=""
               />
             </div>
@@ -212,7 +212,7 @@
           <div class="barber-card">
             <div class="img-part">
               <img
-                src="licensed_barbers/vamsi-konduri-7C8V6a9FLBQ-unsplash.jpg"
+                src="images/vamsi-konduri-7C8V6a9FLBQ-unsplash.jpg"
                 alt=""
               />
             </div>
@@ -230,43 +230,43 @@
         </div>
         <div class="gallery-container">
           <div class="item medium">
-            <img src="gallery_images/img1.jpg" alt="" />
+            <img src="images/img1.jpg" alt="" />
           </div>
           <div class="item large">
-            <img src="gallery_images/img2.jpg" alt="" />
+            <img src="images/img2.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="gallery_images/img3.jpg" alt="" />
+            <img src="images/img3.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="gallery_images/img4.jpg" alt="" />
+            <img src="images/img4.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="gallery_images/img5.jpg" alt="" />
+            <img src="images/img5.jpg" alt="" />
           </div>
           <div class="item medium">
-            <img src="gallery_images/img6.jpg" alt="" />
+            <img src="images/img6.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="gallery_images/img7.jpg" alt="" />
+            <img src="images/img7.jpg" alt="" />
           </div>
           <div class="item medium">
-            <img src="gallery_images/img8.jpg" alt="" />
+            <img src="images/img8.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="gallery_images/img9.jpg" alt="" />
+            <img src="images/img9.jpg" alt="" />
           </div>
           <div class="item large">
-            <img src="gallery_images/img10.jpg" alt="" />
+            <img src="images/img10.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="gallery_images/img11.jpg" alt="" />
+            <img src="images/img11.jpg" alt="" />
           </div>
           <div class="item medium">
-            <img src="gallery_images/img12.jpg" alt="" />
+            <img src="images/img12.jpg" alt="" />
           </div>
           <div class="item small">
-            <img src="gallery_images/img13.jpg" alt="" />
+            <img src="images/img13.jpg" alt="" />
           </div>
         </div>
         <div class="button-add">
@@ -276,22 +276,22 @@
       <section class="contact-section" id="contact">
         <div class="contact-container">
           <div class="contact-box">
-            <img src="contact_icons/email.svg" alt="" />
+            <img src="icons/email.svg" alt="" />
             <h2>INFO@YOURSITES.COM</h2>
           </div>
           <div class="contact-box">
-            <img src="contact_icons/telephone.svg" alt="" />
+            <img src="icons/telephone.svg" alt="" />
             <h2>1 234 56 789</h2>
           </div>
           <div class="contact-box">
-            <img src="contact_icons/location_pin.svg" alt="" />
+            <img src="icons/location_pin.svg" alt="" />
             <h2>
               2277 LOREM AVE.,<br />
               SAN DIEGO, CA 22553
             </h2>
           </div>
           <div class="contact-box">
-            <img src="contact_icons/time.svg" alt="" />
+            <img src="icons/time.svg" alt="" />
             <h2>TUES - FRI 10 - 8 SAT 10 - 5</h2>
           </div>
         </div>
